--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -18,6 +18,7 @@
       <li><a href="#" th:href="@{/product/list}">Products Listing</a></li>
       <li><a href="#" th:href="@{/brand/index}">Brands Listing</a></li>
       <li><a href="#" th:href="@{/supplier/index}">Suppliers Listing</a></li>
+      <li><a href="#" th:href="@{/staff/list}">Staff Listing</a></li>
     </ul>
   </div>
 </nav>
