--- a/src/main/resources/templates/StaffList.html
+++ b/src/main/resources/templates/StaffList.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <title>Insert title here</title>
 </head>
 <body>
+  <header th:insert="layout/layout.html :: header"></header>
+  <div th:replace="layout/layout.html :: menu" ></div>
 <h1>Staff Listing</h1>
 	<!-- Add Hyperlink -->
 	<a href="StaffForm.html" th:href="@{/staff/add}">Add User</a>
@@ -44,6 +47,7 @@
 		</tr>
 	</table>
 	<br/>
+		<div th:replace="layout/layout.html :: footer"></div>
 
 </body>
 </html>
