--- a/src/main/resources/templates/BrandIndex.html
+++ b/src/main/resources/templates/BrandIndex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -15,18 +16,18 @@
         <tr>
             <th>Id</th>
             <th>Brand Name</th>
-            <th>Edit</th>
-            <th>Delete</th>
+            <th sec:authorize="hasRole('ADMIN')">Edit</th>
+            <th sec:authorize="hasRole('ADMIN')">Delete</th>
         </tr>
         </thead>
         <tbody>
           <tr th:each="brand : ${brands}">
 			<td th:text="${brand.id}"/>
         	<td th:text="${brand.name}"/>
-         	<td>
+         	<td sec:authorize="hasRole('ADMIN')">
          		<a th:href="@{/brand/edit/}+${brand.id}">Edit</a>
        		</td>
-          	<td>
+          	<td sec:authorize="hasRole('ADMIN')">
          		<a th:href="@{/brand/delete/}+${brand.id}">Delete</a>
        		</td>
           </tr>
