--- a/src/main/resources/templates/InventoryForm.html
+++ b/src/main/resources/templates/InventoryForm.html
@@ -19,7 +19,7 @@
 			<input list="products" th:field="*{productName}">
 			<datalist id="products">
 				<select>
-					<option th:each="p:${productList}" th:value=${p.name}></option>
+					<option th:each="p:${productList}" th:text=${p.name}>You will never see this who cares</option>
 				</select>
 			</datalist>
 		</fieldset>
@@ -28,12 +28,12 @@
 			<input list="suppliers" th:field="*{supplierName}">
 			<datalist id="suppliers">
 				<select>
-					<option th:each="s:${supplierList}" th:value=${s.name}></option>
+					<option th:each="s:${supplierList}" th:text=${s.name}>_1_</option>
 				</select>
 			</datalist>
 		</fieldset>
 		<fieldset>
-			Quantity in Stock: <input type="text" th:field="*{quantity}">
+			<input type="hidden" th:field="*{quantity}">
 		</fieldset>
 		<fieldset>
 			Shelf Location: <input type="text" th:field="*{shelfLocation}">
