--- a/src/main/resources/templates/InventoryForm.html
+++ b/src/main/resources/templates/InventoryForm.html
@@ -3,19 +3,21 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" th:href="@{/styles/forms.css}"/>
 <title>Inventory Form</title>
 </head>
 <body>
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
-<h1>Inventory Details</h1>
+  <div class="form-container">
+	<h2>Inventory Details</h2>
 	<form action="" th:object="${inventory}" th:action="@{/inventory/save}"
 		method="POST" class="form-horizontal">
 		<fieldset>
 			<input type="hidden" th:field="*{id}" />
 		</fieldset>
-		<fieldset>
-			Product Name
+		<fieldset class="form-input-container">
+			<label>Product Name:</label>
 			<input list="products" th:field="*{productName}">
 			<datalist id="products">
 				<select>
@@ -23,8 +25,8 @@
 				</select>
 			</datalist>
 		</fieldset>
-		<fieldset>
-			Supplier Name
+		<fieldset class="form-input-container">
+			<label>Supplier Name:</label>
 			<input list="suppliers" th:field="*{supplierName}">
 			<datalist id="suppliers">
 				<select>
@@ -32,33 +34,42 @@
 				</select>
 			</datalist>
 		</fieldset>
-		<fieldset>
+		<fieldset class="form-input-container">
 			<input type="hidden" th:field="*{quantity}">
 		</fieldset>
-		<fieldset>
-			Shelf Location: <input type="text" th:field="*{shelfLocation}">
+		<fieldset class="form-input-container">
+			<label>Shelf Location:</label>
+			<input type="text" th:field="*{shelfLocation}">
 		</fieldset>
-		<fieldset>
-		Reorder Level:<input type="text" th:field="*{reorderLvl}">
+		<fieldset class="form-input-container">
+			<label>Reorder Level:</label>
+			<input type="text" th:field="*{reorderLvl}">
 		</fieldset>
-		<fieldset>
-		Reorder Quantity:<input type="text" th:field="*{reorderQty}">
+		<fieldset class="form-input-container">
+			<label>Reorder Quantity:</label>
+			<input type="text" th:field="*{reorderQty}">
 		</fieldset>
-		<fieldset>
-			Wholesale Price: <input type="text" th:field="*{wholesalePrice}">
+		<fieldset class="form-input-container">
+			<label>Wholesale Price:</label>
+			<input type="text" th:field="*{wholesalePrice}">
 		</fieldset>
-		<fieldset>
-			Retail Price: <input type="text" th:field="*{retailPrice}">
+		<fieldset class="form-input-container">
+			<label>Retail Price:</label>
+			<input type="text" th:field="*{retailPrice}">
 		</fieldset>
-		<fieldset>
-			Partner Price: <input type="text" th:field="*{partnerPrice}">
+		<fieldset class="form-input-container">
+			<label>Partner Price:</label>
+			<input type="text" th:field="*{partnerPrice}">
 		</fieldset>
-		<fieldset>
-			<button type="submit">Save</button>
+		<br />
+		<fieldset class="button-container">
+			<div class="btn btn-danger">
+				<a href="InventoryList.html" th:href="@{/inventory/list}">Cancel</a>
+			</div>
+			<button class="btn btn-primary" type="submit">Save</button>
 		</fieldset>
 	</form>
-	<a href="InventoryList.html" th:href="@{/inventory/list}">Back to Inventory</a>
-	
+	</div>	
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
