--- a/src/main/resources/static/styles/forms.css
+++ b/src/main/resources/static/styles/forms.css
@@ -19,6 +19,10 @@
 	width: 70%;
 }
 
+.form-input-container > select {
+	width: 70%;
+}
+
 .button-container {
 	display:flex; 
 	flex-direction:row; 
@@ -29,4 +33,8 @@
 .button-container > div > a {
 	color: white; 
 	text-decoration:none; 
+}
+
+.readonly-input {
+	border:none;
 }
