--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -28,6 +28,8 @@
 			<th>Wholesale Price</th>
 			<th>Retail Price</th>
 			<th>Partner Price</th>
+			<th sec:authorize="hasRole('ADMIN')">Restock</th>
+			<th sec:authorize="hasRole('ADMIN')">Report Damage</th>
 			<th sec:authorize="hasRole('ADMIN')">Edit</th>
 			<th sec:authorize="hasRole('ADMIN')">Delete</th>
 		</tr>
@@ -43,6 +45,12 @@
 			<td th:text=${inventory.wholesalePrice}>Wholesale Price</td>
 			<td th:text=${inventory.retailPrice}>Retail Price</td>
 			<td th:text=${inventory.partnerPrice}>Partner Price</td>
+			<td><a href="RestockForm.html"
+ 				sec:authorize="hasRole('ADMIN')"
+				th:href="@{/manage/restock/}+${inventory.id}">Restock</a></td>
+			<td><a href="RestockForm.html"
+ 				sec:authorize="hasRole('ADMIN')"
+				th:href="@{/manage/withdraw/}+${inventory.id}">Damage</a></td>
  			<td><a href="EditInventory.html"
  				sec:authorize="hasRole('ADMIN')"
 				th:href="@{/inventory/edit/}+${inventory.id}">Edit</a></td>
