--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -13,7 +13,8 @@
 		<h2 th:if="${not #lists.isEmpty(InventoryList)}">Product Inventory List</h2>
 	<a href="InventoryForm.html" th:href="@{/inventory/add}" sec:authorize="hasRole('ADMIN')">
 	    		<div class="btn btn-primary">Add Inventory Log</div></a>
-
+	<a href="UsageForm.html" th:href="@{/UsageForm/add}">Create Usage
+		Form</a>
 
 	<table th:if="${not #lists.isEmpty(InventoryList)}" class="table table-striped">
 		<thead>
@@ -32,6 +33,8 @@
 			<th sec:authorize="hasRole('ADMIN')">Report Damage</th>
 			<th sec:authorize="hasRole('ADMIN')">Edit</th>
 			<th sec:authorize="hasRole('ADMIN')">Delete</th>
+			<th sec:authorize="hasRole('ADMIN')">Check Transaction History</th>
+			<th></th>
 		</tr>
 		</thead>
 		<tr th:each="inventory:${InventoryList}">
@@ -57,6 +60,18 @@
 			<td><a href="DeleteInventory.html"
 				sec:authorize="hasRole('ADMIN')"
 				th:href="@{/inventory/delete/}+${inventory.id}">Delete</a></td>
+			<td>
+				<form action="#"
+					th:action="@{/UsageForm/checkHistory/}+${inventory.id}"
+					method="POST">
+					<button type="submit">Check</button>
+				</form>
+			</td>
+			<td><form action="#"
+					th:action="@{/FormCart/addToForm/}+${inventory.id}" method="POST">
+					<button type="submit">Add to Usage Form</button>
+				</form></td>
+			
 		</tr>
 	</table>
 </div>
