--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -60,6 +60,30 @@
 		</tr>
 	</table>
 </div>
+<div th:if="${totalPages >1}">
+<div class="row col-sm-10">
+<div class="col-sm-2">
+Total rows:[[${totalItems}]]
+
+
+</div>
+<div class="col-sm-1">
+<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+<a th:if="${currentPage !=i}" th:href="@{'/inventory/page/'+${i}}">[[${i}]]</a>
+<span th:unless="${currentPage !=i}">[[${i}]]</span> &nbsp; &nbsp;
+</span>
+</div>
+<div class="col-sm-1">
+<a th:if="${currentPage < totalPages}" th:href="@{'/inventory/page/'+${currentPage+1}}">Next</a>
+<span th:unless="${currentPage < totalPages}">Next</span>
+</div>
+<div class="col-sm-1">
+<a th:if="${currentPage < totalPages}" th:href="@{'/inventory/page/'+${totalPages}}">Last</a>
+<span th:unless="${currentPage < totalPages}">Last</span>
+</div>
+</div>
+</div>
+
 	 <br/>
 
   <div th:replace="layout/layout.html :: footer"></div>
