--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -11,37 +11,40 @@
 	<table th:if="${not #lists.isEmpty(cartList)}">
 		<tr>
 			<th>Product Id</th>
-<!-- 		<th>Part Name</th>
+	 		<th>Part Name</th>
 			<th>Part Number</th>
 			<th>description</th>
-			<th>Brand</th> -->
+			<th>Brand</th> 
 			<th>Qty</th>
 			<th>Remove Part</th>
 			<th>Check Transaction History</th>
 		</tr>
 		<tr th:each="cart:${cartList}">
 			<td th:text=${cart.inventory.id}>inventory Id</td>
-<!--			<td th:text=${cart.inventory.product.name}>Part Name</td>
+			<td th:text=${cart.inventory.product.name}>Part Name</td>
 			<td th:text=${cart.inventory.product.partNumber}>Part Number</td>
 			<td th:text=${cart.inventory.product.description}>Part Description</td>
-			<td th:text=${cart.inventory.product.brand.name}>Brand</td> -->
+			<td th:text="${cart.inventory.product.brand} ? ${cart.inventory.product.brand.name} : 'Not Set'">Brand</td> 
 			<td th:text=${cart.qty}>Qty</td>
 			<td width="50px">
 				<div class="quantitybtn">
 					<input type="button" value="-" class="minus"
-						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" /><input
+						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" />
+					<input
 						type="text" name="quantity" th:value="${cart.qty}" id="item_input"
 						min="1" max="" title="Qty" class="input-text"
-						onkeydown="return false" /><input type="button" value="+"
+						onkeydown="return false" />
+					<input type="button" value="+"
 						class="plus" th:attr="inventory_id = ${cart.inventory.id}"
-						id="item_plus" /> <input type="hidden" name="inventoryId"
+						id="item_plus" /> 
+					
+					<input type="hidden" name="inventoryId"
 						th:value="${cart.inventory.id}" />
 				</div>
 			</td>
 			<td><a href="#" th:href="@{/UsageForm/remove/}+${cart.id}">Remove</a></td>
 			<td>
 				<form action="#" th:action="@{/UsageForm/checkHistory/}+${cart.inventory.id}" method="POST">
-				<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 				<button type="submit">Check</button>
 				</form>
 			</td>
@@ -73,8 +76,14 @@
 
 
 <script>
+// var token = $("meta[name='_csrf']").attr("content");
+// var header = $("meta[name='_csrf_header']").attr("content");
+// $(document).ajaxSend(function(e, xhr, options) {xhr.setRequestHeader(header, token);});
+
     window.onload = function () {
-        let minusButtons = document.getElementsByClassName("minus");
+    	
+    	
+    	let minusButtons = document.getElementsByClassName("minus");
         for (minusButton of minusButtons) {
             minusButton.addEventListener("click", QtyMinus);
         }
@@ -102,14 +111,8 @@
 
         xhr.open("POST", "/UsageForm/ChangeCartQty", true);
         //xhr.setRequestHeader("Content-Type", "application/json; charset=utf8");
-        
-        $(function() {
-    var token = $("meta[name='_csrf']").attr("content");
-    var header = $("meta[name='_csrf_header']").attr("content");
-    $(document).ajaxSend(function(e, xhr, options) {
-        xhr.setRequestHeader(header, token);
-    });
-});
+        xhr.setRequestHeader("XSRF-TOKEN", "<%=csrfToken&>");
+
         xhr.send(JSON.stringify({
             "inventoryId": inventoryId,
             "action": action
