--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -1,5 +1,12 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <meta charset="ISO-8859-1">
+<head>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<meta name="_csrf" th:content="${_csrf.token}" />
+<!-- default header name is X-CSRF-TOKEN -->
+<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<!-- ... -->
 <title>ProductList</title>
 </head>
 <body>
@@ -26,25 +33,21 @@
 			<td th:text=${cart.qty}>Qty</td>
 			<td width="50px">
 				<div class="quantitybtn">
-						<input type="button" value="-" class="minus"
-						th:attr="product_id = ${cart.product.id}" />
-						
-						<input
-						type="text" name="quantity" th:value="${cart.qty}"
-						min="1" max="" title="Qty" class="input-text"
-						onkeydown="return false" />
-						
-						<input type="button" value="+"
-						class="plus" th:attr="product_id = ${cart.product.id}"/> 
-						
-						<input type="hidden" name="productId"
-						th:value="${cart.product.id}" />
+					<input type="button" value="-" class="minus"
+						th:attr="product_id = ${cart.product.id}" /> <input type="text"
+						name="quantity" th:value="${cart.qty}" min="1" max="" title="Qty"
+						class="input-text" onkeydown="return false" /> <input
+						type="button" value="+" class="plus"
+						th:attr="product_id = ${cart.product.id}" /> <input type="hidden"
+						name="productId" th:value="${cart.product.id}" />
 				</div>
 			</td>
 			<td><a href="#" th:href="@{/UsageForm/remove/}+${cart.id}">Remove</a></td>
 			<td>
-				<form action="#" th:action="@{/UsageForm/checkHistory/}+${cart.product.id}" method="POST">
-				<button type="submit">Check</button>
+				<form action="#"
+					th:action="@{/UsageForm/checkHistory/}+${cart.product.id}"
+					method="POST">
+					<button type="submit">Check</button>
 				</form>
 			</td>
 		</tr>
@@ -72,9 +75,13 @@
 			<button type="submit">Create Record</button>
 		</fieldset>
 	</form>
+	<form action="#" th:action="@{/UsageForm/cancel}" method="POST">
+		<button type="submit">Cancel</button>
+	</form>
 
 
 	<script>
+    
     window.onload = function () {
         let minusButtons = document.getElementsByClassName("minus");
         for (minusButton of minusButtons) {
@@ -100,17 +107,16 @@
         ChangeCartQty(productId, "plus");
         console.log("QtyPlus");
     }
-
+    
     function ChangeCartQty(productId, action) {
-        let xhr = new XMLHttpRequest();
+        
+    	var xhr = new XMLHttpRequest();
+		var token = document.querySelector('meta[name="_csrf"]').content;
+		var header = document.querySelector('meta[name="_csrf_header"]').content;
 
         xhr.open("POST", "/UsageForm/ChangeCartQty", true);
-        xhr.setRequestHeader("Content-Type", "application/json; charset=utf8");
-		
-        xhr.send(JSON.stringify({
-            productId,
-            action
-        }));
+        xhr.setRequestHeader('Content-Type', 'application/json; charset=utf8')
+        xhr.setRequestHeader(header, token);
         
         xhr.onreadystatechange = function () {
             if (this.readyState === XMLHttpRequest.DONE) {
@@ -128,6 +134,11 @@
                 console.log("fail");
             }
         };
+        
+        xhr.send(JSON.stringify({
+            "productId": productId,
+            "action": action
+        }));
     }
 
 </script>
