+/- buttons bug fixed

--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -137,7 +137,7 @@
         };
         
         xhr.send(JSON.stringify({
-            "productId": productId,
+            "inventoryId": inventoryId,
             "action": action
         }));
     }
