--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -13,9 +13,10 @@
 		<h2 th:if="${not #lists.isEmpty(InventoryList)}">Product Inventory List</h2>
 	<a href="InventoryForm.html" th:href="@{/inventory/add}" sec:authorize="hasRole('ADMIN')">
 	    		<div class="btn btn-primary">Add Inventory Log</div></a>
-	<a href="UsageForm.html" th:href="@{/UsageForm/add}">Create Usage
+	<a href="UsageForm.html" th:if="${session.UsageForm == null}" th:href="@{/UsageForm/add}">Create Usage
 		Form</a>
-
+	<a href="UsageForm.html" th:if="${session.UsageForm != null}" th:href="@{/UsageForm/add}">View Usage
+		Form Draft</a>
 	<table th:if="${not #lists.isEmpty(InventoryList)}" class="table table-striped">
 		<thead>
 		<tr>
@@ -34,7 +35,7 @@
 			<th sec:authorize="hasRole('ADMIN')">Edit</th>
 			<th sec:authorize="hasRole('ADMIN')">Delete</th>
 			<th sec:authorize="hasRole('ADMIN')">Check Transaction History</th>
-			<th></th>
+			<th th:if="${session.UsageForm != null}"></th>
 		</tr>
 		</thead>
 		<tr th:each="inventory:${InventoryList}">
@@ -67,10 +68,12 @@
 					<button type="submit">Check</button>
 				</form>
 			</td>
-			<td><form action="#"
-					th:action="@{/FormCart/addToForm/}+${inventory.id}" method="POST">
+			<td th:if="${session.UsageForm != null}">
+			<!--  <div th:if="${session.containsKey('UsageForm')}"> -->
+			<form action="#" th:action="@{/FormCart/addToForm/}+${inventory.id}" method="POST">
 					<button type="submit">Add to Usage Form</button>
-				</form></td>
+				</form>
+				</td>
 			
 		</tr>
 	</table>
