--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -28,31 +28,23 @@
 			<td th:text=${cart.inventory.id}>inventory Id</td>
 			<td th:text=${cart.inventory.product.name}>Part Name</td>
 			<td th:text=${cart.inventory.product.partNumber}>Part Number</td>
-			<td th:text=${cart.inventory.product.description}>Part Description</td>
-			<td th:text="${cart.inventory.product.brand} ? ${cart.inventory.product.brand.name} : 'Not Set'">Brand</td> 
+			<td th:text=${cart.inventory.product.description}>Part
+				Description</td>
+			<td
+				th:text="${cart.inventory.product.brand} ? ${cart.inventory.product.brand.name} : 'Not Set'">Brand</td>
 			<td th:text=${cart.qty}>Qty</td>
 			<td width="50px">
 				<div class="quantitybtn">
 					<input type="button" value="-" class="minus"
 						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" />
-					<input
-						type="text" name="quantity" th:value="${cart.qty}" id="item_input"
-						min="1" max="" title="Qty" class="input-text"
-						onkeydown="return false" />
-					<input type="button" value="+"
-						class="plus" th:attr="inventory_id = ${cart.inventory.id}"
-						id="item_plus" /> 
-					
-					<input type="hidden" name="inventoryId"
-						th:value="${cart.inventory.id}" />
+					<input type="text" name="quantity" th:value="${cart.qty}"
+						id="item_input" min="1" max="" title="Qty" class="input-text" />
+					<input type="button" value="+" class="plus"
+						th:attr="inventory_id = ${cart.inventory.id}" id="item_plus" /> <input
+						type="hidden" name="inventoryId" th:value="${cart.inventory.id}" />
 				</div>
 			</td>
 			<td><a href="#" th:href="@{/UsageForm/remove/}+${cart.id}">Remove</a></td>
-			<td>
-				<form action="#" th:action="@{/UsageForm/checkHistory/}+${cart.inventory.id}" method="POST">
-				<button type="submit">Check</button>
-				</form>
-			</td>
 		</tr>
 	</table>
 	<form action="#" th:action="@{/UsageForm/addInventory}" method="POST">
@@ -124,7 +116,10 @@
                 // receive response from server
                 if (this.status === 200 || this.status === 302) {
                     let data = JSON.parse(this.responseText);
-
+                    if(data.message == "Reached maximum stock"){
+                    	alert(data.message);
+                        location.reload();
+                    }
                     if (this.status === 200 && data.status == "success") {
                         console.log("Successful operation: " + data.status);
                         // Need to refresh current window for changes to show
