--- a/bin/src/main/resources/templates/Index.html
+++ b/bin/src/main/resources/templates/Index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Index page</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<title>IndexPage</title>
 </head>
 <body>
-<h1>Index page</h1>
+  <header th:insert="layout/layout.html :: header"></header>
+  <div th:replace="layout/layout.html :: menu" ></div>
+  <div style="padding-left: 50px; padding-right: 50px;">
+  	  <h1>INDEX page</h1>
+	  <h3 th:inline = "text">Welcome to hell, [[${#httpServletRequest.RemoteUser}]]!</h3>
+	  <p><h1 style="color: white;">I hate Thymeleaf. I have life.</h1></p>
+  </div>
+  <div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
