--- a/src/main/resources/templates/PartTransHistory.html
+++ b/src/main/resources/templates/PartTransHistory.html
@@ -2,44 +2,60 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>PartTransHitory</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<title>Usage History</title>
+<style>
+
+th, td {
+  padding: 5px;
+  text-align: center;
+}
+
+</style>
 </head>
 <body>
-	<h2>Part TransHistory</h2>
+<header th:insert="layout/layout.html :: header"></header>
+  <div th:replace="layout/layout.html :: menu" ></div>
+  <div style="padding-left: 50px; padding-right: 50px;">
+	<h2>Usage History</h2>
+	<br>
 	<table>
-		<tr>
-			<th>You are checking part:</th>
-			<td th:text=${Inventory.product.name}>Product Name</td>
+		<tr align="left">
+			<th style="padding:10px">Product Name:</th>
+			<td th:text=${Inventory.product.name} style="padding:10px">Product Name</td>
 		</tr>
-		<tr>
-			<th>Supplier Name:</th>
-			<td th:text=${Inventory.supplier.name}>Supplier Name</td>
+		<tr align="left">
+			<th style="padding:10px">Supplier Name:</th>
+			<td th:text=${Inventory.supplier.name} style="padding:10px">Supplier Name</td>
 		</tr>
 	</table>
-
-	<div th:each="cart:${cartList}">
+	<p th:if="${#lists.isEmpty(cartList)}"><br>No Transaction History Found</p>
+<hr />
 		<div>
-			<span th:text="${'Consumed Qty: ' + cart.qty}"></span>
-		</div>
-		<hr />
-		<div>
-			<table>
+			<table class="table table-striped">
+				<col width="10%">
+				<col width="20%">
+				<col width="20%">
+				<col width="20%">
+				<col width="20%">
 				<tr>
 					<th>Record ID</th>
 					<th>Customer</th>
 					<th>Car</th>
 					<th>Transaction Date</th>
+					<th>Quantity Consumed</th>
 				</tr>
 				<!-- 				<tr th:each="usageForm:${UsageForm}"> -->
-				<tr>
+				<tr th:each="cart:${cartList}">
 					<td th:text=${cart.usageForm.id}>ID</td>
 					<td th:text=${cart.usageForm.customer}>Customer</td>
 					<td th:text=${cart.usageForm.car}>Car</td>
 					<td th:text=${cart.usageForm.creationDate}>Date</td>
+					<td th:text="${cart.qty}">Consumed Quantity</td>
 				</tr>
 			</table>
 		</div>
-	</div>
+	
 	<a href="#" th:href="@{/inventory/list}">Go back to inventory list</a>
 	<!-- 	<table> -->
 	<!-- 		<tr> -->
@@ -54,6 +70,11 @@
 	<!-- 		</tr> -->
 	<!-- 	</table> -->
 	<!-- 	<h4>You are</h4> -->
+</div>
+
+<br/>
+
+<div th:replace="layout/layout.html :: footer"></div>
 
 </body>
 </html>
