--- a/src/main/resources/templates/TransactionSummary.html
+++ b/src/main/resources/templates/TransactionSummary.html
@@ -2,13 +2,28 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <title>Usage Form</title>
+<style>
+
+th, td {
+  padding: 5px;
+}
+
+.hello2 > th, td {
+text-align: center!important;
+}
+
+</style>
 </head>
 <body>
+<header th:insert="layout/layout.html :: header"></header>
+  <div th:replace="layout/layout.html :: menu" ></div>
+  <div style="padding-left: 50px; padding-right: 50px;">
 	<h2>A new record has been created successfully!</h2>
 	<p></p>
 	<h3>Summary</h3>
-	<table>
+	<table class="hello">
 		<tr>
 			<th>Record ID</th>
 			<td th:text=${UsageForm.id}>Customer</td>
@@ -22,9 +37,19 @@
 			<td th:text=${UsageForm.car}></td>
 		</tr>
 		<tr>
-			<th>Usage</th>
-			<td>
-				<table>
+		<tr>
+			<th>Description</th>
+			<td th:text=${UsageForm.description}>Description</td>
+		</tr>
+		<tr>
+			<th>Date</th>
+			<td th:text=${UsageForm.creationDate}>Creation Date</td>
+		</tr>
+	</table>
+	<br>
+			<p><b>Parts Used</b></p>
+			
+				<table class="table table-striped hello2">
 					<tr>
 						<th>Inventory ID</th>
 						<th>Product Name</th>
@@ -38,17 +63,14 @@
 						<td th:text=${cart.qty}></td>
 					</tr>
 				</table>
-			</td>
-		</tr>
-		<tr>
-			<th>Description</th>
-			<td th:text=${UsageForm.description}>Description</td>
-		</tr>
-		<tr>
-			<th>Date</th>
-			<td th:text=${UsageForm.creationDate}>Creation Date</td>
-		</tr>
-	</table>
+			
+		
+		
 	<a href="#" th:href="@{/inventory/list}">Go back to inventory list</a>
+</div>
+
+<br/>
+
+<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
