--- a/src/main/resources/templates/TransactionSummary.html
+++ b/src/main/resources/templates/TransactionSummary.html
@@ -19,7 +19,7 @@ th, td {
 	<h2>A new record has been created successfully!</h2>
 	<p></p>
 	<h3>Summary</h3>
-	<table class="hello">
+	<table>
 		<tr>
 			<th>Record ID</th>
 			<td th:text=${UsageForm.id}>Customer</td>
@@ -45,7 +45,7 @@ th, td {
 	<br>
 			<p><b>Parts Used</b></p>
 			
-				<table class="table table-striped hello2">
+				<table class="table table-striped">
 					<tr>
 						<th>Inventory ID</th>
 						<th>Product Name</th>
