.dat file with supplier id included

--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -81,8 +81,8 @@
 </div>
 
 
-  <a href="ReportGenerate.html" th:href="@{/inventory/generate}" sec:authorize="hasRole('ADMIN')">
-	    		<div class="btn btn-primary">GenerateReport</div></a>
+ <!-- <a href="ReportGenerate.html" th:href="@{/inventory/generate}" sec:authorize="hasRole('ADMIN')">
+	    		<div class="btn btn-primary">GenerateReport</div></a> -->
 
 
 
