--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -5,8 +5,15 @@
 <title>Access Denied!</title>
 </head>
 <body>
-	<h1>Access denied!</h1>
-	<p>You do not have the permission to access this resource. Contact an admin for more information.</p>
-	<p>Click your browser's back button to return to what you were previously doing.</p>
+	<h1>[403] Access denied</h1>
+	<p>You do not have the permission to access this resource. Please verify if you have the appropriate privileges.</p>
+	<p>Click the button or press your browser's back button to return to what you were previously doing.</p>
+	<button onclick="goBack()">Go back</button>
+
+	<script>
+		function goBack() {
+  		window.history.back();
+		}
+	</script>
 </body>
 </html>
