--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -50,7 +50,7 @@
 				th:href="@{/manage/restock/}+${inventory.id}">Restock</a></td>
 			<td><a href="RestockForm.html"
  				sec:authorize="hasRole('ADMIN')"
-				th:href="@{/manage/withdraw/}+${inventory.id}">Damage</a></td>
+				th:href="@{/manage/withdraw/}+${inventory.id}">Report</a></td>
  			<td><a href="EditInventory.html"
  				sec:authorize="hasRole('ADMIN')"
 				th:href="@{/inventory/edit/}+${inventory.id}">Edit</a></td>
