--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
 <div th:fragment="header" id="header">
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#" th:href="@{/}">Team 2</a>
+      <a class="navbar-brand" href="#" th:href="@{/}">CIMS</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#" th:href="@{/}">Home</a></li>
@@ -20,7 +20,11 @@
       <li><a href="#" th:href="@{/supplier/index}">Suppliers</a></li>
       <li><a href="#" th:href="@{/inventory/list}">Product Inventory</a></li>
       <li><a href="#" th:href="@{/staff/list}" sec:authorize="hasRole('ADMIN')" >Staff</a></li>
-      <li><a href="#" th:href="@{/logout}">Logout</a></li> 
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+     <li sec:authorize="isAuthenticated()"style="margin-right:120px;margin-top:15px;color:white"><b>Logged in as <span sec:authentication="name"></span></b></li> 
+    <li><a href="#" th:href="@{/logout}"><button class="btn btn-danger" style="margin-left:-90px; margin-top:-8px"><span class="glyphicon glyphicon-log-out"></span> Logout</button></a></li>
     </ul>
   </div>
 </nav>
