--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -21,24 +21,26 @@
   </div>
   
       
-      
-<div class="container" style="margin-left:600px;" sec:authorize="hasRole('ADMIN')">
-<h2 style="margin-left:220px;"><b>Admin Quick Links</b></h2>
+    
+<div class="container" sec:authorize="hasRole('ADMIN')">
+	<div  style="display:flex; justify-content:space-around;">
+		<h2><b>Admin Quick Links</b></h2>
+	</div>
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-info" style="width: 700px">
+            <div class="panel panel-info" style="">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="glyphicon glyphicon-info-sign"></span> Shortcuts</h3>
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                       <div class="col-md-12">
-                          <a href="#" class="btn btn-success btn-lg" role="button" th:href="@{/product/add}"><span class="glyphicon glyphicon-plus"></span> <br/>Add Catalog</a>
-                          <a href="#" class="btn btn-info btn-lg" role="button"th:href="@{/brand/create}"><span class="glyphicon glyphicon-globe"></span> <br/>Add Brand</a>
-                          <a href="#" class="btn btn-primary btn-lg" role="button" th:href="@{/supplier/create}"><span class="glyphicon glyphicon-plane"></span> <br/>Add Supplier</a>
-                          <a href="#" class="btn btn-primary btn-lg" role="button" th:href="@{/inventory/add}"><span class="glyphicon glyphicon-list-alt"></span> <br/>Add Invent Log</a>
-                          <a href="#" class="btn btn-warning btn-lg" role="button" th:href="@{/staff/add}"><span class="glyphicon glyphicon-user"></span> <br/>Add Staff</a>
+                       <div class="col-md-12" style="display:flex; justify-content:space-around; flex-wrap:wrap; max-width:100%;">
+                          <a href="#" style="width:100%; margin: 10px; flex:1;" class="btn btn-success btn-lg" role="button" th:href="@{/product/add}"><span class="glyphicon glyphicon-plus"></span> <br/>Add Catalog</a>
+                          <a href="#" style="width:100%; margin: 10px; flex:1;" class="btn btn-info btn-lg" role="button"th:href="@{/brand/create}"><span class="glyphicon glyphicon-globe"></span> <br/>Add Brand</a>
+                          <a href="#" style="width:100%; margin: 10px; flex:1;" class="btn btn-primary btn-lg" role="button" th:href="@{/supplier/create}"><span class="glyphicon glyphicon-plane"></span> <br/>Add Supplier</a>
+                          <a href="#" style="width:100%; margin: 10px; flex:1;" class="btn btn-primary btn-lg" role="button" th:href="@{/inventory/add}"><span class="glyphicon glyphicon-list-alt"></span> <br/>Add Invent Log</a>
+                          <a href="#" style="width:100%; margin: 10px; flex:1;" class="btn btn-warning btn-lg" role="button" th:href="@{/staff/add}"><span class="glyphicon glyphicon-user"></span> <br/>Add Staff</a>
                         </div>
                     </div>
                 </div>
