--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -1,29 +1,48 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <meta charset="ISO-8859-1">
 <head>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <meta name="_csrf" th:content="${_csrf.token}" />
-<!-- default header name is X-CSRF-TOKEN -->
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-<!-- ... -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" th:href="@{/styles/forms.css}" />
+<link rel="stylesheet" th:href="@{/styles/QtyButtonStyle.css}"/>
+<style>
+th, td {
+  padding: 5px;
+  text-align: center;
+}
+</style>
 <title>ProductList</title>
 </head>
 <body>
-	<h1>Usage Form</h1>
-	<!-- Add Hyperlink -->
+	<header th:insert="layout/layout.html :: header"></header>
+	<div th:replace="layout/layout.html :: menu" ></div>
+	<div style="padding-left: 50px; padding-right: 50px;">
+	<h2>Usage Form</h2>
+	<br />
 	<h2 th:if="${not #lists.isEmpty(cartlist)}">Part List</h2>
-	<table th:if="${not #lists.isEmpty(cartList)}">
+	<br />
+	<table th:if="${not #lists.isEmpty(cartList)}"
+		class="table table-striped" style="width: 1000px">
+		<col width="10%">
+		<col width="20%">
+		<col width="15%">
+		<col width="20%">
+		<col width="15%">
+		<col width="10%">
+		<col width="10%">
+		<thead>
 		<tr>
 			<th>Product Id</th>
 			<th>Part Name</th>
 			<th>Part Number</th>
-			<th>description</th>
+			<th>Description</th>
 			<th>Brand</th>
 			<th>Qty</th>
-			<th>Remove Part</th>
-			<th>Check Transaction History</th>
+			<th></th>
 		</tr>
+		</thead>
 		<tr th:each="cart:${cartList}">
 			<td th:text=${cart.inventory.id}>inventory Id</td>
 			<td th:text=${cart.inventory.product.name}>Part Name</td>
@@ -32,50 +51,53 @@
 				Description</td>
 			<td
 				th:text="${cart.inventory.product.brand} ? ${cart.inventory.product.brand.name} : 'Not Set'">Brand</td>
-			<td th:text=${cart.qty}>Qty</td>
+<!-- 			<td th:text=${cart.qty}>Qty</td> -->
 			<td width="50px">
 				<div class="quantitybtn">
 					<input type="button" value="-" class="minus"
-						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" />
-					<input type="text" name="quantity" th:value="${cart.qty}"
-						id="item_input" min="1" max="" title="Qty" class="input-text" />
-					<input type="button" value="+" class="plus"
-						th:attr="inventory_id = ${cart.inventory.id}" id="item_plus" /> <input
-						type="hidden" name="inventoryId" th:value="${cart.inventory.id}" />
+						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" /><input type="text" name="quantity" th:value="${cart.qty}"
+						id="item_input" min="1" max="" title="Qty" class="input-text" /><input type="button" value="+" class="plus"
+						th:attr="inventory_id = ${cart.inventory.id}" id="item_plus" /> 
+						<input type="hidden" name="inventoryId" th:value="${cart.inventory.id}" />
 				</div>
 			</td>
-			<td><a href="#" th:href="@{/UsageForm/remove/}+${cart.id}">Remove</a></td>
+			<td style="padding: 13px"><a href="#" th:href="@{/UsageForm/remove/}+${cart.id}"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSlP5KUHwia9MiER09OFBNh9TBOr4VFYipC0w&usqp=CAU" class="remove" /></a></td>
 		</tr>
 	</table>
+	<br />
 	<form action="#" th:action="@{/UsageForm/addInventory}" method="POST">
-		<button type="submit">Add Inventory Log</button>
+		<button type="submit" class="btn btn-primary">Add Inventory Log</button>
 	</form>
+	<br />
+	</div>
 	<!-- 	<a href="InventoryForm.html" th:href="@{/inventory/list}">Add Inventory</a> -->
-	<form action="#" th:object="${UsageForm}"
-		th:action="@{/UsageForm/save}" method="POST">
-		<fieldset>
-			Customer: <input type="text" th:field="*{customer}">
-		</fieldset>
-		<fieldset>
-			Car registered: <input type="text" th:field="*{car}">
-		</fieldset>
-		<fieldset>
-			<div>
-				<p>Description</p>
-				<input type="text" style="width: 300px; height: 140px"
-					th:field="*{description}">
-			</div>
-		</fieldset>
-		<fieldset>
-			<button type="submit">Create Record</button>
-		</fieldset>
-	</form>
-	<form action="#" th:action="@{/UsageForm/cancel}" method="POST">
-		<button type="submit">Cancel</button>
-	</form>
-
-
-	<script>
+	<br />
+	<div class="form-container">
+		<form action="#" th:object="${UsageForm}"
+			th:action="@{/UsageForm/save}" method="POST">
+			<fieldset class="form-input-container" style="width: 500px">
+				<label>Customer:</label> <input type="text" th:field="*{customer}">
+			</fieldset>
+			<fieldset class="form-input-container" style="width: 500px">
+				<label>Car registered:</label> <input type="text" th:field="*{car}">
+			</fieldset>
+			<fieldset class="form-input-container" style="width: 500px; height: 200px">
+					<label>Description:</label> <textarea rows="20" cols="46"
+						th:field="*{description}" style="resize: none"></textarea>
+			</fieldset>
+			<br />
+			<fieldset>
+				<button type="submit" class="btn btn-primary">Create Record</button>
+			</fieldset>
+		</form>
+		<form action="#" th:action="@{/UsageForm/cancel}" method="POST">
+			<button type="submit" class="btn btn-danger">Cancel</button>
+		</form>
+	</div>
+	<br />
+	<div th:replace="layout/layout.html :: footer"></div>
+</body>
+<script>
     
     window.onload = function () {
         let minusButtons = document.getElementsByClassName("minus");
@@ -138,7 +160,4 @@
     }
 
 </script>
-
-
-</body>
 </html>
