resolve footer issue

--- a/src/main/resources/templates/BrandIndex.html
+++ b/src/main/resources/templates/BrandIndex.html
@@ -7,6 +7,8 @@
 <title>Brands</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   	<div style="padding-left: 50px; padding-right: 50px;">
@@ -73,7 +75,7 @@
 
 	 <br/>
     
-    
+    </div>
       <div th:replace="layout/layout.html :: footer"></div>
     
 </body>
