--- a/src/main/resources/templates/NoTransHistory.html
+++ b/src/main/resources/templates/NoTransHistory.html
@@ -5,6 +5,9 @@
 <title>No TransHistory</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
 <p>Sorry, no record history found :(</p>
+</div>
 </body>
 </html>
