--- a/src/main/resources/templates/PartTransHistory.html
+++ b/src/main/resources/templates/PartTransHistory.html
@@ -14,6 +14,8 @@ th, td {
 </style>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
 <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div style="padding-left: 50px; padding-right: 50px;">
@@ -73,7 +75,7 @@ th, td {
 </div>
 
 <br/>
-
+</div>
 <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
