--- a/src/main/resources/templates/StaffForm.html
+++ b/src/main/resources/templates/StaffForm.html
@@ -7,6 +7,8 @@
 <title>Staff From</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   	<div class="form-container">
@@ -50,6 +52,7 @@
 				<button class="btn btn-primary" type="submit">Save</button>
 			</fieldset>
 		</form>
+	</div>
 	</div>
 			<div th:replace="layout/layout.html :: footer"></div>
 	
