--- a/src/main/resources/templates/StaffList.html
+++ b/src/main/resources/templates/StaffList.html
@@ -6,6 +6,8 @@
 <title>Staff</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   	<div style="padding-left: 50px; padding-right: 50px;">
@@ -78,7 +80,7 @@ Total rows:[[${totalItems}]]
 </div>
 </div>
 	
-	
+	</div>
 		<div th:replace="layout/layout.html :: footer"></div>
 
 </body>
