--- a/src/main/resources/templates/SupplierIndex.html
+++ b/src/main/resources/templates/SupplierIndex.html
@@ -7,6 +7,8 @@
 <title>Suppliers</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   	<div style="padding-left: 50px; padding-right: 50px;">
@@ -72,7 +74,7 @@ Total rows:[[${totalItems}]]
 </div>
 
 	 <br/>
-    
+    </div>
 	<div th:replace="layout/layout.html :: footer"></div>
     
 </body>
