--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -29,7 +29,7 @@
   </div>
 </nav>
 </div>
-<footer style="position:fixed; bottom:0; width: 100%; padding-left: 20px; padding-bottom: 10px; padding-top: 10px; background-color: black;" th:fragment="footer">
+<footer style="position:fixed; height: 80px; margin-top: -80px; bottom:0; width: 100%; padding-left: 20px; padding-bottom: 10px; padding-top: 10px; background-color: black;" th:fragment="footer">
 		<a href="Home" th:href="@{/}">Back to Home</a>
 		<br/>
 		 <small style="color: white;">Now is: <b
