--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -5,6 +5,8 @@
 <title>Access Denied!</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
 	<h1>[403] Access denied</h1>
 	<p>You do not have the permission to access this resource. Please verify if you have the appropriate privileges.</p>
 	<p>Click the button or press your browser's back button to return to what you were previously doing.</p>
@@ -15,5 +17,6 @@
   		window.history.back();
 		}
 	</script>
+	</div>
 </body>
 </html>
