--- a/src/main/resources/templates/BrandForm.html
+++ b/src/main/resources/templates/BrandForm.html
@@ -7,6 +7,8 @@
 <title>Brand Form</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div class="form-container">
@@ -32,6 +34,6 @@
 		</form>
 	</div>
 	  <div th:replace="layout/layout.html :: footer"></div>
-	
+	</div>
 </body>
 </html>
