--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -6,6 +6,8 @@
 <title>IndexPage</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div align="center"><h1><b>Inventory Management System</b></h1></div>
@@ -48,6 +50,7 @@
         </div>
     </div>
 </div>  
+</div>
   <div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
