--- a/src/main/resources/templates/InventoryForm.html
+++ b/src/main/resources/templates/InventoryForm.html
@@ -7,6 +7,8 @@
 <title>Inventory Form</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div class="form-container">
@@ -72,6 +74,7 @@
 		</fieldset>
 	</form>
 	</div>	
+	</div>
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
