--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -6,6 +6,8 @@
 <title>Product Inventory List</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
 	<!-- Add Hyperlink -->
@@ -115,7 +117,7 @@ Total rows:[[${totalItems}]]
 </div>
 
 	 <br/>
-
+</div>
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
