--- a/src/main/resources/templates/ProductForm.html
+++ b/src/main/resources/templates/ProductForm.html
@@ -7,6 +7,8 @@
 <title>Product Form</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div class="form-container">
@@ -69,7 +71,7 @@
 			</div>
 		</form>
 	</div>
-	
+	</div>
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
