--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -7,6 +7,8 @@
 <title>Catalogue</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
 
@@ -84,7 +86,7 @@ Total rows:[[${totalItems}]]
 </div>
 
 	<br />
-
+</div>
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
