--- a/src/main/resources/templates/SupplierForm.html
+++ b/src/main/resources/templates/SupplierForm.html
@@ -7,6 +7,8 @@
 <title>Supplier Form</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   	<div class="form-container">
@@ -33,6 +35,7 @@
 			</fieldset>
 		</form>
 				
+	</div>
 	</div>
 		<div th:replace="layout/layout.html :: footer"></div>
 	
