--- a/src/main/resources/templates/TransactionSummary.html
+++ b/src/main/resources/templates/TransactionSummary.html
@@ -13,6 +13,8 @@ th, td {
 </style>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
+
 <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
   <div style="padding-left: 50px; padding-right: 50px;">
@@ -66,7 +68,7 @@ th, td {
 </div>
 
 <br/>
-
+</div>
 <div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
