--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -16,6 +16,7 @@ th, td {
 <title>ProductList</title>
 </head>
 <body>
+<div style="padding-bottom: 80px;">
 	<header th:insert="layout/layout.html :: header"></header>
 	<div th:replace="layout/layout.html :: menu" ></div>
 	<div style="padding-left: 50px; padding-right: 50px;">
@@ -99,6 +100,7 @@ th, td {
 <!-- 		</form> -->
 	</div>
 	<br />
+	</div>
 	<div th:replace="layout/layout.html :: footer"></div>
 </body>
 <script>
