Search bar added for product/inventory page by RongKai

--- a/src/main/resources/templates/InventoryList.html
+++ b/src/main/resources/templates/InventoryList.html
@@ -11,6 +11,15 @@
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
 	<!-- Add Hyperlink -->
+	
+	<div style="padding-left: 50px">
+	<form th:action="@{/inventory/listInventories}" class="search"> 
+   <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" style="height: 33px" />&nbsp;
+   <input type="submit" value="search" class="btn btn-primary"/>&nbsp;
+   <input type="button" value="clear" id="btnClear" onclick="clearSearch()" class="btn btn-danger"/>
+	</form>
+	</div>
+	
 	<div style="padding-left: 50px; padding-right: 50px;">
 		<h2 th:if="${not #lists.isEmpty(InventoryList)}">Product Inventory List</h2>
 		<br />
@@ -121,4 +130,9 @@ Total rows:[[${totalItems}]]
   <div th:replace="layout/layout.html :: footer"></div>
 
 </body>
+<script type = "text/javascript">
+function clearSearch(){
+window.location = "[[@{/inventory/listInventories}]]"
+}
+</script>
 </html>
