custom 404 and 500 error pages

--- a/src/main/resources/templates/500.html
+++ b/src/main/resources/templates/500.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Access Denied!</title>
+<title>Internal Server!</title>
 </head>
 <body>
 <div style="padding-bottom: 80px;">
 
-	<h1>[403] Access denied</h1>
-	<p>You do not have the permission to access this resource. Please verify if you have the appropriate privileges.</p>
+	<h1>[500] Internal Server Error</h1>
 	<p>Click the button or press your browser's back button to return to what you were previously doing.</p>
 	<button onclick="goBack()">Go back</button>
+
+	
 	</div>
 </body>
 	<script>
